fixed audio on mobile

--- a/public/main.css
+++ b/public/main.css
@@ -201,3 +201,6 @@ canvas {
 .img {
 	width: 100%;
 }
+.no-show {
+	display: none;
+}
